# youtubenotes

./: .env.example  .gitignore  LICENSE  README.md  STARTUP_BRIEFING.md  audio_analyzer.py  channel_add.py  channels.example.yaml  config.example.yaml  funasr_transcribe.py  obsidian_sync.py  pyproject.toml  requirements.txt  run_backfill.py  run_pipeline.py  run_tracker.py  test_run.py  youtube_downloader.py
.agents/: SKILL.md
.agents/workflows/: debug-funasr.md  run-pipeline.md
docs/: architecture.md  dev-handoff.md  scheduler.md  setup.md
src/ytbnotes/analyzer/: config.py  llm_processor.py  main.py  metadata.py  result_writer.py  subtitle.py  transcriber.py  utils.py
src/ytbnotes/common/: __init__.py  ticker_normalizer.py
src/ytbnotes/downloader/: downloader.py
src/ytbnotes/sync/: config_loader.py  graph_manager.py  note_renderer.py  parser.py  path_resolver.py  storage.py  sync.py
src/ytbnotes/tracker/: __init__.py  models.py  opinion_extractor.py  opinion_store.py
src/ytbnotes/transcribe/: funasr.py
src/ytbnotes/verifier/: __init__.py  dashboard.py  evaluator.py  market_data.py  scorer.py
tools/: backfill_json.py  build_dashboard_data.py  cerebras_poc.py  channel_screen.py  discover_channels.py  extract_cookies.py  migrate_notes.py  run_discovery.sh  youtube_rss.py
tools/scheduler/: openclaw.cron.example  run_discovery_job.sh  run_routine_job.sh  run_scheduled_job.sh
web/: package-lock.json  package.json
web/.astro/: settings.json
web/src/components/: ActivityFeed.tsx  BloggerTable.tsx  OpinionTable.tsx  PriceChart.tsx  QualityReport.tsx  (+4 more)
(+13 files in other folders)
